--- a/src/components/OrderCancel/OrderCancel.css
+++ b/src/components/OrderCancel/OrderCancel.css
@@ -27,7 +27,7 @@
   cursor: pointer;
   font-family: PingFangSC-Medium;
   font-size: 14px;
-  color: rgba(0,0,0,0.70);
+  color: #172A4D;
   letter-spacing: 0;
   /* line-height: 20px; */
 }
