--- a/src/components/OrderDetails/OrderDetails.css
+++ b/src/components/OrderDetails/OrderDetails.css
@@ -321,7 +321,7 @@
 	margin: 5px 0px 0px 5px;
 }
 .order_tips{
-	/*width: 77%;*/
+	width: 100%;
   display: inline-block;
 	padding-top: 10px;
 	/*padding-right: 10px;*/
