--- a/src/components/OrderDetails/OrderDetails.html
+++ b/src/components/OrderDetails/OrderDetails.html
@@ -195,20 +195,20 @@
 <!--                <span class="order_status" v-if="paying=false">待付款</span>-->
 <!--                <span class="order_status" v-if="paying=true">已付款</span>-->
                 <!-- 卖单，但是买家已经付款 -->
-                <span class="order_status" v-if="(detail_type == 1) && paying==true && ctc_order.status == 2">已付款</span>
+                <span class="order_status" v-if="(detail_type == 1|| detail_type == 4) && paying==true && ctc_order.status == 2">已付款</span>
                 <!-- 买单，并且已经花钱了 -->
 <!--                <span class="order_status" v-if="(detail_type == 1) && paying==true && !canneling">已付款</span>-->
 
                 <span class="order_status" v-if="(detail_type == 1 || detail_type == 4) && paying==false && canneling">已撤单</span>
-                <span class="order_status" v-if="detail_type == 2">已完成</span>
-                <span class="order_status" v-if="detail_type == 3">已取消</span>
+<!--                <span class="order_status" v-if="ctc_order.status == '3' && (detail_type == 2||detail_type == 4)">已完成</span>-->
+<!--                <span class="order_status" v-if="ctc_order.status == '4' && (detail_type == 3||detail_type == 4)">已取消</span>-->
 
                 <em class="order_status" v-if="ctc_order.status == '7' && (detail_type == 1 || detail_type == 4)">确认超时</em>
 <!--                <em class="order_status" v-if="this.ctc_order.status == 'EXPIRE2' && detail_type == 4">确认收款超时</em>-->
 <!--                <em class="order_status" v-if="this.ctc_order.status == 'ABNORMAL' && detail_type == 4">订单异常</em>-->
                 <em class="order_status" v-if="(ctc_order.status == '5'||ctc_order.status == '8'||ctc_order.status == '9') && detail_type == 4">申诉订单</em>
-                <em class="order_status" v-if="ctc_order.status == '3' && detail_type == 4">已完成</em>
-                <em class="order_status" v-if="ctc_order.status == '4' && detail_type == 4">已取消</em>
+                <em class="order_status" v-if="ctc_order.status == '3' && (detail_type != 3)">已完成</em>
+                <em class="order_status" v-if="ctc_order.status == '4' && (detail_type == 3||detail_type == 4)">已取消</em>
 <!--                <em class="order_status" v-if="(detail_type != 1 || detail_type != 4) && ctc_order.status == 1">已取消</em>-->
 <!--                <span v-if="(detail_type != 1 || detail_type != 4) && ctc_order.status == 1">代付款</span>-->
 
@@ -218,7 +218,7 @@
 
 
                 <span v-if="(detail_type != 1 || detail_type != 4) && !paying && ctc_order.status == 1">剩余</span>
-                <span id="times" v-if="(detail_type == 1 || detail_type == 4)&& !paying && ctc_order.status != 2"></span>
+                <span id="times" v-if="(detail_type == 1 || detail_type == 4)&& !paying && ctc_order.status != 3"></span>
                 <!-- 倒计时 end -->
 
 
