--- a/src/components/BasePageBar/BasePageBar.html
+++ b/src/components/BasePageBar/BasePageBar.html
@@ -19,7 +19,8 @@
 
     <li class="page-bar-li jump">
       <input type="text" class="jump-input" v-model="inputTag">
-      <span class="jump-button text_blue pointer" @click="clickGo">下一页</span>
+<!--      <span class="jump-button text_blue pointer" @click="clickGo">下一页</span>-->
+      <span class="jump-button text_blue pointer" @click="clickToGoAfter">下一页</span>
     </li>
   </ul>
 </div>
