--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -998,11 +998,11 @@
                     </li>
                     <li class="navigation-item-hidden-list-item">
                       <router-link
-                        :to="{name:'historicalEntrust'}"
+                        :to="{name:'OrderConduct'}"
                         class="navigation-item-hidden-list-item-router"
                         active-class="item_selected"
                       >
-                        {{$t('历史委托')}}
+                        {{$t('法币订单')}}
                       </router-link>
                     </li>
                   </ul>
