修改划转跳转链接

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -13,7 +13,7 @@
           <div class="transaction-header-right-amount-num strong">{{toFixed(USDTAvailable*1,8)}}</div>
           <div class="transaction-header-right-amount-unit">USDT</div>
         </div>
-        <div class="transaction-header-right-btn " @click="goToRecharge">充值</div>
+        <div class="transaction-header-right-btn " @click="goToRecharge">划转</div>
       </div>
     </div>
   </div>
