--- a/src/components/PaymentSet/PaymentSe.css
+++ b/src/components/PaymentSet/PaymentSe.css
@@ -90,6 +90,13 @@
   cursor: pointer;
 }
 
+.release-txt-grey {
+  color: #A2B5D9;
+  font-size: 14px;
+  line-height: 14px;
+  cursor: pointer;
+}
+
 .change-txt {
   color:#3576F5;
   font-size: 14px;
