修改银行卡样式+修改提示信息

--- a/src/components/PaymentSet/PaymentSe.html
+++ b/src/components/PaymentSet/PaymentSe.html
@@ -97,8 +97,7 @@
                         {{row.userName}}
                       </div>
                       <!--银行卡号-->
-                      <div class="bank-label-card-number">
-                        {{changeBankCard(row.bankNumber)}}
+                      <div class="bank-label-card-number">{{changeBankCard(row.bankNumber)}}
                       </div>
                       ，
                       <!--银行信息-->
