--- a/src/components/BusinessCenter/BusinessCenter.css
+++ b/src/components/BusinessCenter/BusinessCenter.css
@@ -94,12 +94,12 @@
 }
 
 .business-header-buy {
-  width: 44%;
+  width: 45%;
   min-height: 200px;
 }
 
 .business-header-sell {
-  width: 44%;
+  width: 45%;
   min-height: 200px;
 }
 
@@ -161,7 +161,7 @@
   /*margin-left: 5px;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
-  color: #6B7DA2;
+  color: #0D0E23;
 }
 .text_light_dark{
   /*opacity: 0.5;*/
@@ -171,7 +171,7 @@
 }
 
 .business-header-item-title {
-  width: 30%;
+  width: 27%;
   /*opacity: 0.5;*/
   font-family: PingFangSC-Regular;
   font-size: 14px;
@@ -275,7 +275,7 @@
   z-index: 1000;
   right: 0;
   top: 41px;
-  width: 68%;
+  width: 70%;
   /*height: 200px;*/
   /*background-color: #6FBF48;*/
 
@@ -563,6 +563,7 @@
   height: 32px;
   font-size: 14px;
   position: relative;
+  color: #0D0E23;
 }
 
 
