--- a/src/components/Transaction/Transaction.html
+++ b/src/components/Transaction/Transaction.html
@@ -87,7 +87,7 @@
 <!--      <a class="transaction-info-title-text-right text_blue" href="https://www.btcdo.com/index/notice/noticeDetail?id=100324" target="_blank">OTC交易说明</a>-->
     </div>
     <div class="transaction-info-container ">
-      1. 24小时之内累计取消订单超过3笔，将禁止1天法币交易；<br/>
+      1. 24小时之内累计取消订单超过3笔，将禁止24小时法币交易；<br/>
       2. 有1个订单未完成，暂停继续下单，完成后恢复；<br/>
       3. 下单后务必在15分钟内付款，转账后立即点击“确认已付款”；<br/>
       4. 超过15分钟，如未点击“确认已付款”，系统视为无效订单，会自动撤销订单；<br/>
