数量精度改为4位

--- a/src/components/OrderConduct/OrderConduct.html
+++ b/src/components/OrderConduct/OrderConduct.html
@@ -42,7 +42,7 @@
             {{$globalFunc.accFixed(item.price,2)}}
           </div>
           <div class="amount">
-            {{$globalFunc.accFixed(item.amount,6)}}
+            {{$globalFunc.accFixed(item.amount,4)}}
           </div>
           <div class="money" :class="item.sellerId == userId ? 'sell' : 'buy'">
             {{item.totalAmount}}
@@ -101,6 +101,12 @@
           <!-- 买单确认收付款 end -->
         </div>
       </div>
+
+
+        <div v-if="list.length == 0 && !loading" class="pending-body-no-pending-box">
+          <img class="pending-body-no-pending-img" src="../../assets/c2c_transaction/no_pending_notice_img.png" alt="">
+          <div class="pending-body-no-pending-text">暂无挂单</div>
+        </div>
     </div>
   </div>
 
