--- a/src/components/OrderComplete/OrderComplete.css
+++ b/src/components/OrderComplete/OrderComplete.css
@@ -75,7 +75,7 @@
 .cannel_time_btn{
   border: 0;
   padding: 5px 10px;
-  background: #EF5656;
+  background-color: rgba(53,118,245,1);
   color: #fff;
   outline: 0;
   cursor: pointer;
