--- a/src/components/OrderConduct/OrderConduct.css
+++ b/src/components/OrderConduct/OrderConduct.css
@@ -101,7 +101,7 @@
   top: 6px;
   border: 0;
   padding: 5px 10px;
-  background: #EF5656;
+  background-color: rgba(53,118,245,1);
   color: #fff;
   outline: 0;
   cursor: pointer;
@@ -408,4 +408,25 @@
     background-color: #fff;
     border-radius: 5px;
   }
+}
+
+
+/*补充 当没有列表时显示样式*/
+.pending-body-no-pending-box {
+  min-height: 200px;
+}
+
+.pending-body-no-pending-img {
+  display: block;
+  margin: 90px auto 0;
+}
+
+.pending-body-no-pending-text {
+  margin: 28px auto 100px;
+  text-align: center;
+  height: 24px;
+  line-height: 24px;
+  font-size: 18px;
+  color: #d4d4d4;
+
 }
